--- a/source/theory.tex
+++ b/source/theory.tex
@@ -4,7 +4,7 @@
 
 Конструктивно диод состоит из баллона (стеклянного, металлического или керамического), в котором создается вакуум $\sim 10^{-7}$ мм ртутного столба, и системы плоских или цилиндрических электродов: катода и анода.
 
-Катод в простейшем случае представляет собой накаливаемую током вольфрамовую нить, которая при достаточно высокой температуре начинает испускать электроны (это явление получило название \textit{термоэлектронной эмиссии}). Но такие прямоканальные катоды применяются очень редко; значительно большее распространение получили катоды с косвенным подогревом, где источником электронов служит эмиттер, электрически изолированный от вольфрамового подогревателя. Преимуществом таких катодов является возможность питания подогревателя переменным током (вследствие достаточно большой инерционности всей системы) и эквипотенциальность поверхности эмиттера. Эмиттеры таких катодов часто покрываются тонкой плёнкой из материалов, имеющих малую работу выхода электронов, что позволяет получить хорошую эмиссию при сравнительно небольшом подогреве.
+Катод в простейшем случае представляет собой накаливаемую током вольфрамовую нить, которая при достаточно высокой температуре начинает испускать электроны (это явление получило название \textit{термоэлектронной эмиссии}).
 
 Если соединить анод с катодом через чувствительный гальванометр, то можно обнаружить в этой цепи анодный ток, величина определённая электрическая мощность. Электроны, излучаемые катодом, увеличивают свою кинетическую энергию за счет энергии электрического поля. При ударе об анод электрон отдаёт ему свою энергию. Энергия электронов выделяется на аноде в виде тепловой энергии и излучается им в окружающее пространство. С повышением анодного напряжения увеличивается количество достигших анода электронов, их скорость и кинетическая энергия, и, следовательно, возрастает и мощность, рассеиваемая анодом. Для каждого типа ламп существует максимальная допустимая величина этой мощности -- $P_{max}$. Превышение
 ее при работе ламп может вывести последнюю из строя. Величину мощности, рассеиваемой анодом, можно подсчитать по формуле
@@ -25,47 +25,89 @@
 	S \approx \frac{\Delta I_a}{\Delta U_a}
 \end{equation}
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Вывод закона 3/2 Ленгмюра}
+Определим зависимость анодного тока от анодного напряжения в диоде, образованном двумя плоскими, безграничными, параллельными друг другу пластинами. В этом случае можно пренебречь краевым эффектом и считать поле между анодом и катодом однородным. Примем следующие допущения. Пусть у поверхности катода $x = 0: U_k = 0$, , начальная скорость электронов $u_0 = 0$.
 
-Определим зависимость анодного тока от анодного напряжения в диоде, образованном двумя плоскими, безграничными, параллельными друг другу пластинами. В этом случае можно пренебречь краевым эффектом и считать поле между анодом и катодом однородным. Примем следующие допущения. Пусть у поверхности катода ($x = 0$) $U_k = 0$ и начальная скорость электронов $u_0 = 0$.
-
-Если предположить, что электроды вакуумной трубки плоские, а температура катода постоянная, то потенциал электрического поля будет зависеть только от одной координаты x, направленной вдоль вакуумной трубки от катода к аноду.
+Если предположить, что электроды вакуумной трубки плоские, а температура катода постоянная, то потенциал электрического поля будет зависеть только от одной координаты $x$, направленной вдоль вакуумной трубки от катода к аноду.
 
 Используем одно из уравнений Максвелла в дифференциальной форме:
-\[\text{div} E = \frac{\rho}{\Epsilon_0},\]
-где $\rho$ -- объёмная плотность заряда. Спроецируем это уравнение на ось $x$:
-\begin{equation} \label{eq:4}
-	\frac{\partial\ E}{\partial\ x} = - \frac{1}{\Epsilon_0} en
-\end{equation}
+\[ \text{div} E = \frac{\rho}{\mathcal{E}_0} \]
 
-Знак минус учитывает, что эмитируемые электроны имеют отрицательный заряд, $\Epsilon_0$ -- электрическая постоянная, $n$ -- концентрация электронов, $E$ --  напряженность электрического поля.
+где $\rho$ - объёмная плотность заряда. Спроецируем это уравнение на ось $x$:
 
-Работа по перемещению единичного точечного положительного заряда из одной точки поля в другую вдоль оси $x$ при условии, что точки расположены бесконечно близко друг к другу \(x_2 - x_1 = dx\), равна $E_x dx$. Та же работа равна \(\phi_1 - \phi_2 = -dU\). Приравняв оба выражения,
-можем записать:
-\begin{equation} \label{eq:5}
-	E_x = - \frac{d U}{d x}
-\end{equation}
+\begin{align} \label{Langmuir-ur1}
+	\frac{\partial E}{\partial x} = - \frac1{\mathcal{E}_0} e n
+\end{align}
 
-Выразим напряженность $E$ через потенциал $U$, с помощью формулы \cref{eq:5}. Заряд можно представить как количество элементарных зарядов (электронов) или заряд электрона на концентрацию в объеме:
-\begin{equation} \label{eq:6}
-	q = eN = enV
-\end{equation}
+Знак минус учитывает, что эмиттируемые электроны имеют отрицательный заряд, $\mathcal{E}_0$ - электрическая постоянная, $n$ - концентрация электронов, $E$ - напряжённость электрического поля. 
 
-С другой стороны объемная плотность заряда равна:
-\[\rho = \frac{d q}{dV} = \frac{d}{dV}enV = en\]
-Тогда получаем, что объемная плотность тока равна:
-\begin{equation} \label{eq:7}
-	j = \rho u = enu
-\end{equation}
+Работа по перемещению единичного точечного положительного заряда из одной точки поля в другую вдоль оси $x$ при условии, что точки расположены бесконечно близко друг к другу $x_2 - x_1 = dx$, равна $E_x dx$. Та же работа равна $\phi_1 - \phi_2 = -dU$. Приравняв оба выражения, можем записать:
 
-Концентрацию выразим через объемную плотность тока, а скорость электронов -- из закона сохранения энергии: $mu^2/2 = eU$:
-\begin{gather}
-	\label{eq:8} n = \frac{j}{eu} \\
-	\label{eq:9} u = \sqrt{\frac{2eU}{m}}
-\end{gather}
+\begin{align} \label{Langmuir-ur2}
+	E_x = - \frac{dU}{dx}
+\end{align}
 
-Тогда уравнение \cref{eq:4} с учетом \cref{eq:5,eq:8,eq:9} принимает вид:
+Выразим напряжённость $E$ через потенциал $U$, с помощью формулы \eqref{Langmuir-ur2}. 
+Заряд можно представить как количество элементарных зарядов(электронов) или заряд электрона на концентрацию в объёме:
+\[ q = eN = enV \]
 
+С другой стороны объёмная плотность заряда равна:
+\[ \rho = \frac{dq}{dV} = \frac{d}{dV} enV = en  \]
+Тогда получаем, что объёмная плотность тока равна:
+\[ j = \rho u = enu \]
+
+Концентрацию выразим через объёмную плотность тока, а скорость электронов - из закона сохранения энергии: $mu^2 / 2 = eU$: 
+\begin{align} \label{Langmuir-ur3}
+	n = \frac{j}{eu} 
+\end{align}
+\begin{align} \label{Langmuir-ur4}
+	u = \sqrt{ \frac{2eU}m } 
+\end{align}
+
+Тогда уравнение \eqref{Langmuir-ur1} с учётом \eqref{Langmuir-ur2}, \eqref{Langmuir-ur3} и \eqref{Langmuir-ur4} принимает вид:
+\begin{align*}
+	\frac{d}{dx} \frac{dU}{dx} = - \frac1{\mathcal{E}_0} e \frac{j}{e} \sqrt{\frac{m}{2eU}}
+\end{align*}
+
+\begin{align} \label{Langmuir-ur5}
+	\frac{d^2U}{dx^2} = \frac{j}{\mathcal{E}_0} \sqrt{\frac{m}{2e}} U^{-\frac12}
+\end{align}
+
+Решение дифференциального уравнения второго порядка \eqref{Langmuir-ur5} будем искать при граничных условиях $\lim\limits_{x \to 0}U = \lim\limits_{x \to 0}E = 0$. Если бы электрическое поле на границе катода было больше нуля, то все электроны, испускаемые катодом, увлекались бы этим полем к аноду, и термоэлектронный ток достигал бы насыщения при любых напряжениях на вакуумной трубке. Коэффициент перед $U^{-1/2}$ обозначим за $a$:
+\begin{align} \label{Langmuir-ur6}
+	\frac{d^2U}{dx^2} = a^2 U^{-\frac12}, \qquad a^2 = \frac{j}{\mathcal{E}_0} \sqrt{\frac{m}{2e}}
+\end{align}
+
+Введём замену:
+\[ p = \frac{dU}{dx}, \qquad \frac{d^2U}{dx^2} = p \frac{dp}{dU} \]
+Тогда, учитывая, что $x = 0:U_k = 0, dU/dx = 0$, получаем:
+\begin{align*}
+	p \frac{dp}{dU} = a^2 U^{-\frac12} \\
+	p dp = a^2 U^{-\frac12} dU \\
+	\frac{p^2}{2} = 2 a^2 U^{\frac12} \\
+	p = 2 a U^{\frac14}
+\end{align*}
+\begin{align*}
+	\frac{dU}{U^{1/4}} = 2 a dx \\
+	\frac43 U^{\frac34} = 2ax
+\end{align*}
+\begin{align} \label{Langmuir-ur7}
+	a = \frac{2U^{3/4}}{3x}
+\end{align}
+Подставим \eqref{Langmuir-ur7} в \eqref{Langmuir-ur6} и пологая, что $x = l$, где $l$ - расстояние между анодом и катодом, получаем:
+\begin{align} \label{Langmuir-ur9}
+	j = \frac{4\mathcal{E}_0}{9 l^2} \sqrt{\frac{2e}{m}} U^{\frac32}
+\end{align}
+Учитывая, что коэффициент перед $U$ - константа, зависящая только от геометрических свойств прибора и фундаментальных постоянных(обозначим её $B$), то уравнение \eqref{Langmuir-ur9} можно переписать в виде: 
+\begin{align} \label{Langmuir_fin}
+	j = BU^{3/2}
+\end{align}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Обработка и построение графиков}
 \subsubsection{Аппроксимация теоретического графика крутизны $S$}
 
@@ -84,6 +126,8 @@
 	\boxed{B = \frac{\sum_{i=1}^n y_i x_i^{\frac{3}{2}}}{\sum_{i=1}^n x_i^3}}
 \end{equation}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Вычисление погрешностей}
 \subsubsection{Приборная погрешность источника питания постоянного тока Б5-50}
 
