Переделал ответы на вопросы

--- a/source/questions.tex
+++ b/source/questions.tex
@@ -3,34 +3,59 @@
 \begin{librarybox}
 	1. Объясните качественно ход анодной характеристики лампы, включенной диодом.
 \end{librarybox}
-Анодная характеристика лампы, включённой диодом (то есть когда сетка соединена с анодом или просто отсутствует в схеме), отражает зависимость анодного тока $I_a$ от анодного напряжения $U_a$ при фиксированном напряжении накала. При малых значениях $U_a$ ток практически равен нулю~--- электроны, испущенные катодом за счёт термоэлектронной эмиссии, не имеют достаточной кинетической энергии, чтобы преодолеть пространственный заряд у катода и долететь до анода. По мере роста $U_a$ всё больше электронов достигают анода, ток начинает расти. В области умеренных напряжений выполняется закон трёх вторых 
-\[I_a = B U_a^{3/2},\]
-где $g$~--- первеанс лампы, зависящий от геометрии электродов. 
+%
+%  График из фото, хз как делать мб 1/(1+np.exp(-10*x)), но немного подругому
+%  см фотки ответов
+%  заглушка с похожим графиком
+\begin{tikzpicture}
+	\begin{axis}[
+		domain=-1:1, 
+		legend pos = north west
+		]
+		\addplot[solid, draw = red]{1/(1 + e^(-10 * x))};
+	\end{axis}
+\end{tikzpicture}
+%
+%
+%
 
-При дальнейшем увеличении $U_a$ практически все эмитированные катодом электроны достигают анода, и ток выходит на насыщение, ограниченное только эмиссионной способностью катода. Таким образом, характеристика имеет характерный S-образный вид: медленный рост в начале, крутой подъём в средней части и выход на горизонтальный участок насыщения. В нашем эксперименте это хорошо видно на графике (рис.~1), где экспериментальные точки отлично ложатся на теоретическую кривую с первеансом $B = 0{,}97\,\frac{\text{мА}}{\text{В}^{3/2}}$.
+Анодная характеристика лампы, включённой диодом (то есть когда сетка соединена с анодом или просто отсутствует в схеме), отражает зависимость анодного тока $I_a$ от анодного напряжения $U_a$ при фиксированном напряжении накала. 
+
+(1) При малых значениях $U_a$ ток практически равен нулю~--- электроны, испущенные катодом за счёт термоэлектронной эмиссии, не имеют достаточной кинетической энергии, чтобы преодолеть пространственный заряд у катода и долететь до анода. 
+
+(2) По мере роста $U_a$ всё больше электронов достигают анода, ток начинает расти. В области умеренных напряжений выполняется закон трёх вторых 
+\[I_a = B U_a^{3/2},\]
+где $B$~--- первеанс лампы, зависящий от геометрии электродов. 
+
+(3) При дальнейшем увеличении $U_a$ практически все эмитированные катодом электроны достигают анода, и ток выходит на насыщение, ограниченное только эмиссионной способностью катода.
 
 \begin{librarybox}
 	2. Пренебрегая начальной скоростью вылета электронов из катода и считая поле между анодом и катодом однородным, а анодное напряжение заданным, найти скорость электронов у поверхности анода и время пролета электроном расстояния между катодом и анодом.
 \end{librarybox}
-Если пренебречь начальной скоростью вылета электронов и считать электрическое поле между катодом и анодом однородным, то движение электрона описывается законами классической механики в постоянном ускоряющем поле. Ускорение электрона $a = \frac{e U_a}{m_e d}$, где $d$~--- расстояние между катодом и анодом, $e$ и $m_e$~--- заряд и масса электрона. Скорость у поверхности анода найдём из сохранения энергии: $\frac{m_e v^2}{2} = e U_a$, откуда $v = \sqrt{\frac{2 e U_a}{m_e}}$. Время пролёта $t$ определим из равнопеременного движения: $d = \frac{1}{2} a t^2$, следовательно $t = \sqrt{\frac{2 d}{a}} = \sqrt{\frac{2 m_e d^2}{e U_a}}$. Эти выражения показывают, что при увеличении анодного напряжения скорость электронов растёт пропорционально $\sqrt{U_a}$, а время пролёта уменьшается как $1/\sqrt{U_a}$, что важно для оценки частотных свойств лампы.
+Если пренебречь начальной скоростью вылета электронов и считать электрическое поле между катодом и анодом однородным, то движение электрона описывается законами классической механики в постоянном ускоряющем поле. Скорость у поверхности анода найдём из сохранения энергии: $\frac{m v^2}{2} = e U_a$, откуда $v = \sqrt{\frac{2 e U_a}{m}}$. Время пролёта $t$ определим из равнопеременного движения: 
+\[ V_{0x} = 0, x_0 = 0 \qquad V_x = V, x = d \]
+\[V = at, x = \frac{1}{2} a t^2 \rightarrow x = V\frac{t}2 \rightarrow t = \frac{2x}{V} \]
+Следовательно: $t = =={2 d}/{\sqrt{\frac{2eU_a}{m}}} = \sqrt{\frac{2 m}{e U_a}}d$. Эти выражения показывают, что при увеличении анодного напряжения скорость электронов растёт пропорционально $\sqrt{U_a}$, а время пролёта уменьшается как $1/\sqrt{U_a}$, что важно для оценки частотных свойств лампы.
 
 \begin{librarybox}
-	3. Каков будет анодный ток триода, если его сетку оставить никуда не подключенной?
+	3. Каков будет анодный ток триода, если его сетку оставить никуда не подключённой?
 \end{librarybox}
-Если сетку триода оставить никуда не подключённой (плавающий потенциал), то на неё будет оседать часть электронов, летящих от катода к аноду, и сетка зарядится до небольшого отрицательного потенциала относительно катода (обычно несколько вольт). Этот отрицательный заряд создаёт тормозящее поле для последующих электронов, поэтому анодный ток будет заметно меньше, чем при соединении сетки с катодом (режим диода). По сути, триод с неподключённой сеткой работает как диод с дополнительным тормозящим электродом, и ток определяется уже не полной эмиссией катода, а только той долей электронов, которые способны преодолеть потенциальный барьер у сетки.
+Если сетку триода оставить никуда не подключённой (плавающий потенциал), то на неё будет оседать часть электронов, летящих от катода к аноду, и на ней образуется отрицательный потенциал. Это создаёт тормозящее поле для последующих электронов, поэтому анодный ток будет заметно меньше, чем при соединении сетки с катодом (режим диода). По сути, триод с неподключенной сеткой работает как диод с дополнительным тормозящим электродом, и ток определяется уже не полной эмиссией катода, а только той долей электронов, которые способны преодолеть потенциальный барьер у сетки.
 
 \begin{librarybox}
 	4. Каков будет характер движения электронов, если на сетку подать большой положительный потенциал, а на анод небольшой отрицательный по отношению к катоду?
 \end{librarybox}
-При большом положительном потенциале на сетке и небольшом отрицательном потенциале на аноде относительно катода электроны, вылетевшие из катода, сначала сильно ускоряются к сетке, пролетают между её проволоками и попадают в область между сеткой и анодом. Там они попадают в тормозящее поле и начинают замедляться. Если кинетической энергии, набранной до сетки, хватает, чтобы долететь до анода даже против тормозящего поля, возникает анодный ток. Однако при достаточно отрицательном аноде большинство электронов не доходит до анода, разворачивается и летит обратно к сетке. Таким образом, почти весь эмиссионный ток катода замыкается на сетку, а анодный ток становится близким к нулю. Движение электронов приобретает характер осцилляций между сеткой и анодом~--- это явление называют электронным динатронным эффектом.
+При большом положительном потенциале на сетке и небольшом отрицательном потенциале на аноде относительно катода электроны, вылетевшие из катода, сначала сильно ускоряются к сетке, пролетают между её проволоками и попадают в область между сеткой и анодом. Там они попадают в тормозящее поле и начинают замедляться. Если кинетической энергии, набранной до сетки, хватает, чтобы долететь до анода даже против тормозящего поля, возникает анодный ток. Однако при достаточно отрицательном аноде большинство электронов не доходит до анода, разворачивается и летит обратно к сетке. Таким образом, почти весь эмиссионный ток катода замыкается на сетку, а анодный ток становится близким к нулю. Движение электронов приобретает характер осцилляций между сеткой и анодом~--- это явление называют замирающим напряжением в сетке.
 
 \begin{librarybox}
 	5. В чем отличие внутреннего сопротивления триода от его сопротивления постоянному току?
 \end{librarybox}
-
-Внутреннее сопротивление триода $R_i = 1/S$~--- это дифференциальное сопротивление по аноду при фиксированном напряжении на сетке, то есть $R_i = \left(\frac{\partial U_a}{\partial I_a}\right)_{U_g=\text{const}}$. Оно характеризует, насколько сильно нужно изменить анодное напряжение, чтобы изменить анодный ток на единицу, и обычно составляет единицы--десятки килоом. Сопротивление постоянному току $R_{\text{пост}} = U_a / I_a$~--- это просто отношение рабочей точки на анодной характеристике, оно может быть от сотен ом до сотен килоом в зависимости от режима и обычно значительно меньше $R_i$. Разница возникает потому, что крутизна $S$ учитывает управление током через геометрию сетки, а $R_{\text{пост}}$~--- это статическое сопротивление в конкретной точке.
+Внутреннее сопротивление триода $R_i = 1/S$~--- это динамическая характеристика, а сопротивление постоянному току $R_{\text{пост}}$ ~--- аналитическая. Внутреннее сопротивление триода ~--- величина, характеризующая, как при малом изменении анодного напряжения изменяется анодный ток при неизменном напряжении на сетке. Поскольку анодные ВАХ триода не линейны, то в каждой точке значения $R_i$ различны.
+%Внутреннее сопротивление триода $R_i = 1/S$~--- это дифференциальное сопротивление по аноду при фиксированном напряжении на сетке, то есть $R_i = \left(\frac{\partial U_a}{\partial I_a}\right)_{U_g=\text{const}}$. Оно характеризует, насколько сильно нужно изменить анодное напряжение, чтобы изменить анодный ток на единицу, и обычно составляет единицы--десятки килоом. Сопротивление постоянному току $R_{\text{пост}} = U_a / I_a$~--- это просто отношение рабочей точки на анодной характеристике, оно может быть от сотен ом до сотен килоом в зависимости от режима и обычно значительно меньше $R_i$. Разница возникает потому, что крутизна $S$ учитывает управление током через геометрию сетки, а $R_{\text{пост}}$~--- это статическое сопротивление в конкретной точке.
 
 \begin{librarybox}
 	6. Чем определяются частотные свойства триода?
 \end{librarybox}
-Частотные свойства триода определяются в первую очередь временем пролёта электронов между катодом и анодом (а также между сеткой и анодом). На высоких частотах входной сигнал на сетке успевает измениться за время, пока электрон летит к аноду, и фаза анодного тока начинает отставать от фазы сеточного напряжения. Кроме того, важны межэлектродные ёмкости (сетка--катод, сетка--анод, анод--катод), которые шунтируют сигнал на высоких частотах, и инерционность катода (тепловая инерция эмиссии). В нашем эксперименте это проявилось в спаде АЧХ усилителя уже на сотнях килогерц~--- коэффициент усиления упал с 1,8 до 1,2 при росте частоты с 1 кГц до 900 кГц.
+Частотные свойства триода определяются его межэлектродными ёмкостями. Ухудшение усиливающих свойств триода при высоких частотах передаваемого сигнала обусловлено изменением ёмкостного сопротивления. Ток в цепи вместо того, чтобы идти по участку с анодным сопротивлением, начинает шунтироваться через триод, в результате чего мощность, выделяемая на аноде и амплитуда снимаемого сигнала уменьшается.
+
+%Частотные свойства триода определяются в первую очередь временем пролёта электронов между катодом и анодом (а также между сеткой и анодом). На высоких частотах входной сигнал на сетке успевает измениться за время, пока электрон летит к аноду, и фаза анодного тока начинает отставать от фазы сеточного напряжения. Кроме того, важны межэлектродные ёмкости (сетка--катод, сетка--анод, анод--катод), которые шунтируют сигнал на высоких частотах, и инерционность катода (тепловая инерция эмиссии). В нашем эксперименте это проявилось в спаде АЧХ усилителя уже на сотнях килогерц~--- коэффициент усиления упал с 1,8 до 1,2 при росте частоты с 1 кГц до 900 кГц.
